rm draggable elements, adjusted padding on icons, and fix end wrapping

--- a/app/styles/measure.less
+++ b/app/styles/measure.less
@@ -77,11 +77,16 @@ label {
 }
 .icon {
   font-family: FontAwesome;
+  display: inline-block;
+  width: 42px;
+  height: 42px;
+  padding-top: 2px;
   color: @brand-primary;
-  padding: 5px 8px;
+  text-align: center;
+  vertical-align: center;
   font-size: 24px;
   border: 2px solid @brand-primary;
-  border-radius: 20px; 
+  border-radius: 25px; 
   margin-right: 5px;
 }
 .encounter .occurrence:before {
@@ -100,6 +105,11 @@ label {
   content: "\f007";
   .icon;
 }
+.patient .occurrence:before {
+  content: "\f007";
+  .icon;
+}
+
 .procedure .occurrence:before {
   content: "\f0c4";
   .icon;
